# magpie

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  tokens.rs  whois.rs
src/commands/: mod.rs  roll.rs  util.rs
