[package]
name = "magpie"
version = "0.1.0"
authors = [
    "Dylan Thinnes <dylan.thinnes@protonmail.com>",
    "Aaron Shappell <aaronshappell@gmail.com>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serenity]
default-features = false
features = [ "voice", "builder", "cache", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "rustls_backend" ]
version = "0.8"
