[package]
name = "magpie"
version = "0.1.0"
authors = [
    "Dylan Thinnes <dylan.thinnes@protonmail.com>",
    "Aaron Shappell <aaronshappell@gmail.com>",
    "Ryan Shappell <hoovcat99@gmail.com>",
    "Tenshi Mori <tenshi.ciaco.mori@gmail.com>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9.0-rc.0"
tokio = { version = "0.2.22", features = ["macros"] }